@@ -10,6 +10,8 @@ Bugfixes
 Features
 --------
 
+* Improving handling of .dep files, and allowing compilers to specify
+  additional targets for the render_posts task (Issue #2536)
 * Allow posts to set custom ``URL_TYPE`` by using the ``url_type``
   meta tag (useful for HTML fragments inserted using JavaScript)
 * Plugins can depend on other plugins being installed (Issue #2533)
